implemented crud methods for player, series, tournaments
